envoy-proxy/conf/envoy.yaml
static_resources:
  listeners:
  - name: http
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
      - filters:
        - name: envoy.filters.network.http_connection_manager
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
            stat_prefix: ingress_http
            
            access_log:
            - name: envoy.access_loggers.stdout
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
            
            http_filters:
            - name: envoy.filters.http.router
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
            
            route_config:
              name: echo
              virtual_hosts:
              - name: echo
                domains:
                - "*"
                routes:
                - match:
                    prefix: "/"
                  route:
                    host_rewrite_literal: echo.colindev.io
                    cluster: echo

  clusters:
  - name: echo
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: echo_cloud_run
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: echo.colindev.io
                port_value: 443
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        sni: echo.colindev.io
